# goodgit

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: rust.yml
