[package]
name = "goodgit"
license = "ISC"
version = "0.1.0"
edition = "2021"

[dependencies]
octocrab = { version = "0.38.0", features = ["rustls-webpki-tokio"] }
opentelemetry = "0.24.0"
opentelemetry-stdout = "0.5.0"
opentelemetry_sdk = { version = "0.24.1", features = ["tokio", "rt-tokio"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.24.0"
tracing-subscriber = "0.3.18"
url = { version = "2.5.2", features = ["serde"] }
tracing-core = "0.1.32"
tokio = { version = "1.38.1", features = ["full"] }
opentelemetry-semantic-conventions = "0.16.0"
opentelemetry-otlp = "0.17.0"
uuid = { version = "1.10.0", features = ["serde", "zerocopy", "v7"] }
thiserror = "1.0.63"
anyhow = "1.0.86"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"

[dev-dependencies]
test-case = "3.3.1"
