[package]
name = "goodgit"
description = "gg – clone repos and retrieve data about the repo from GitHub API. Supports Gitlab as well."
license = "ISC"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["derive", "env"] }
octocrab = { version = "0.38.0", features = ["rustls-webpki-tokio"] }
opentelemetry = "0.24.0"
opentelemetry-otlp = "0.17.0"
opentelemetry-semantic-conventions = "0.16.0"
opentelemetry-stdout = "0.5.0"
opentelemetry_sdk = { version = "0.24.1", features = ["tokio", "rt-tokio"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.63"
tokio = { version = "1.38.1", features = ["full"] }
tracing = "0.1.40"
tracing-core = "0.1.32"
tracing-opentelemetry = "0.24.0"
tracing-subscriber = "0.3.18"
url = { version = "2.5.2", features = ["serde"] }
uuid = { version = "1.10.0", features = ["serde", "zerocopy", "v7"] }

[dev-dependencies]
test-case = "3.3.1"
